# recc-os

./: README.md  black.sh  flake8.sh  isort.cfg  isort.sh  mypy.sh  project.dic  pytest.ini  requirements.test.txt  setup.cfg  uninstall.sh
recc_os/: __init__.py
recc_storage/: __init__.py
tester/: base_storage_test_case.py  test_storage.py
tester/case/: base_storage_test_case.py
