[metadata]
name = recc-os
description = Recc Object Storage
version = attr: recc_os.__version__
author = zer0
author_email = osom8979@gmail.com
maintainer = zer0
maintainer_email = osom8979@gmail.com
url = https://answerdoc.bogonets.com
project_urls =
    GitHub: issues = https://github.com/bogonets/recc-os/issues
    GitHub: repo = https://github.com/bogonets/recc-os
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
keywords =
    RECC
    Database
classifiers =
    Development Status :: 4 - Beta
    Framework :: AsyncIO
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.9
packages = find:
include_package_data = True

[options.packages.find]
exclude =
    tester*
